starting to implement OpenSSL Comatibility

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,12 @@ set(CMAKE_REQUIRED_INCLUDES ${OPENSSL_INCLUDE_DIR})
 set(CMAKE_REQUIRED_LIBRARIES OpenSSL::Crypto OpenSSL::SSL)
 target_link_libraries(gcloud-libcurl-example ssl crypto)
 
+if(${OPENSSL_VERSION} VERSION_GREATER_EQUAL "3.0.0" ) 
+  message(WARNING "Openssl 3.0.0 or greater detected")
+else()
+  message(WARNING "Openssl below 3.0.0 detected")
+endif()
+
 find_package(CURL REQUIRED)
 include_directories(${CURL_INCLUDE_DIRS})
 target_link_libraries(gcloud-libcurl-example ${CURL_LIBRARIES})
