added target for seuqnce diagram

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,11 @@ set(SOURCES
 )
 add_executable(gcloud-libcurl-example ${SOURCES})
 
+
+set(CMAKE_MODULE_PATH
+  ${CMAKE_CURRENT_SOURCE_DIR}/cmake
+)
+
 # target_compile_options(gcloud-libcurl-example PUBLIC -fmacro-prefix-map=../src/=)
 
 find_package(OpenSSL REQUIRED)
@@ -25,12 +30,6 @@ set(CMAKE_REQUIRED_INCLUDES ${OPENSSL_INCLUDE_DIR})
 set(CMAKE_REQUIRED_LIBRARIES OpenSSL::Crypto OpenSSL::SSL)
 target_link_libraries(gcloud-libcurl-example ssl crypto)
 
-if(${OPENSSL_VERSION} VERSION_GREATER_EQUAL "3.0.0" ) 
-  message(WARNING "Openssl 3.0.0 or greater detected")
-  add_compile_definitions(WITH_OPENSSL3)
-else()
-  message(STATUS "Openssl below 3.0.0 detected")
-endif()
 
 find_package(CURL REQUIRED)
 include_directories(${CURL_INCLUDE_DIRS})
@@ -39,4 +38,31 @@ target_link_libraries(gcloud-libcurl-example ${CURL_LIBRARIES})
 include_directories(include)
 
 
+
+
+
+find_package(PlantUML)
+if(DEFINED PlantUML)
+  set(DOCS
+    ../docs/sequence.uml
+  )
+  add_custom_target(DOCS ALL
+      WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/doc
+      DEPENDS ${PROJECT_SOURCE_DIR}/doc/sequence.svg
+      COMMENT "DOCS target"
+      VERBATIM
+  )
+
+  add_custom_command(
+    OUTPUT
+      ../doc/sequence.svg
+    COMMAND
+      ${PlantUML} ${PROJECT_SOURCE_DIR}/doc/sequence.uml -darkmode -tsvg
+    WORKING_DIRECTORY
+      ${PROJECT_SOURCE_DIR}/doc
+    DEPENDS
+      ${DOC_SRCS}
+    
+    )
+endif()
 
